<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/et_noktp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_perm_identity"
            android:drawablePadding="10dp"
            android:hint="@string/noktp"
            android:inputType="text"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/et_nohp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_contact_phone"
            android:drawablePadding="10dp"
            android:hint="@string/nohp"
            android:inputType="text"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_house"
            android:drawablePadding="10dp"
            android:hint="@string/address"
            android:inputType="text"
            android:paddingLeft="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="bottom"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/txt_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:padding="5dp">

                <Button
                    android:id="@+id/btn_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="0dp"
                    android:layout_toLeftOf="@id/btn_delete"
                    android:background="@drawable/btn_customer_background"
                    android:drawableLeft="@drawable/ic_edit"
                    android:padding="5dp"
                    android:text="Save"
                    android:textColor="@color/white"
                    android:textSize="12dp" />

                <Button
                    android:id="@+id/btn_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="0dp"
                    android:background="@drawable/btn_delete_customer_background"
                    android:drawableLeft="@drawable/ic_delete"
                    android:padding="5dp"
                    android:text="Delete"
                    android:textColor="@color/white"
                    android:textSize="12dp" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>