<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:weightSum="12">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@drawable/login_background"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="240dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="60dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/card_background"
                android:elevation="5dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:src="@drawable/logo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/register"
                        android:textColor="@color/blue"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/input_noktp"
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:layout_marginTop="20dp"
                                android:background="@drawable/edittext_border"
                                android:drawableLeft="@drawable/ic_perm_identity"
                                android:drawablePadding="10dp"
                                android:hint="@string/noktp"
                                android:inputType="text"
                                android:paddingLeft="10dp" />

                            <EditText
                                android:id="@+id/input_nama"
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:layout_marginTop="10dp"
                                android:background="@drawable/edittext_border"
                                android:drawableLeft="@drawable/ic_person"
                                android:drawablePadding="10dp"
                                android:hint="@string/nama"
                                android:inputType="text"
                                android:paddingLeft="10dp" />

                            <EditText
                                android:id="@+id/input_email"
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:layout_marginTop="10dp"
                                android:background="@drawable/edittext_border"
                                android:drawableLeft="@drawable/ic_email"
                                android:drawablePadding="10dp"
                                android:hint="@string/email"
                                android:inputType="text"
                                android:paddingLeft="10dp" />

                            <EditText
                                android:id="@+id/input_nohp"
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:layout_marginTop="10dp"
                                android:background="@drawable/edittext_border"
                                android:drawableLeft="@drawable/ic_contact_phone"
                                android:drawablePadding="10dp"
                                android:hint="@string/nohp"
                                android:inputType="text"
                                android:paddingLeft="10dp" />

                            <EditText
                                android:id="@+id/input_alamat"
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:layout_marginTop="10dp"
                                android:background="@drawable/edittext_border"
                                android:drawableLeft="@drawable/ic_house"
                                android:drawablePadding="10dp"
                                android:hint="@string/alamat"
                                android:inputType="text"
                                android:paddingLeft="10dp" />

                            <EditText
                                android:id="@+id/input_password"
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:layout_marginTop="10dp"
                                android:background="@drawable/edittext_border"
                                android:drawableLeft="@drawable/ic_lock"
                                android:drawablePadding="10dp"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:paddingLeft="10dp" />

                            <EditText
                                android:id="@+id/input_confirmpassword"
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:layout_marginTop="10dp"
                                android:background="@drawable/edittext_border"
                                android:drawableLeft="@drawable/ic_lock"
                                android:drawablePadding="10dp"
                                android:hint="@string/confirm_password"
                                android:inputType="textPassword"
                                android:paddingLeft="10dp" />

                            <Button
                                android:id="@+id/btnL_register"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_marginTop="15dp"
                                android:background="@drawable/btn_background"
                                android:text="@string/register"
                                android:textColor="@android:color/white"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/txtRegister"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="15dp"
                                android:onClick="login"
                                android:text="@string/already_have_an_account"
                                android:textColor="@color/blue"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>